--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,45 @@ body{
     background-color: #282D35;
 }
 
+header{
+    display: flex;
+    width: 100%;
+    height: 60px;
+    background: #21222A;
+    padding-top: 30px;
+}
+
+img{
+    width: 40px;
+    height: 36px;
+    margin-left: 100px;
+}
+
+header > h2{
+    color: #61DAFB;
+    margin-top: 5px;
+    margin-left: 10px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22.2535px;
+    line-height: 27px;
+    letter-spacing: -0.05em;
+}
+
+header > h3{
+    color: #DEEBF8;
+    margin-left: 60%;
+    margin-top: 5px;
+    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+}
+
 .main{
     width: 100%;
     padding-top: 110px;
@@ -23,11 +62,11 @@ body{
 
     color: #FFFFFF;
 
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .points{
-    margin-left: 35%;
+    margin-left: 30%;
 }
 
 .points > div{
@@ -39,7 +78,7 @@ body{
     width: 11px;
     height: 11px;
     margin-right: 18px;
-    margin-top: 4px;
+    margin-top: 8px;
 }
 
 .points > div > p{
@@ -50,7 +89,7 @@ body{
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
-    line-height: 19px;
+    line-height: 30px;
 
     color: #FFFFFF;
 }
