Added react logo

--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,11 @@ header > h3{
 
     color: #FFFFFF;
 }
+
+.react-js-logo{
+    position: absolute;
+    width: 263px;
+    height: 520px;
+    right: 0px;
+    top: 198px;
+}
