Added static theme toggle button

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ img{
     margin-left: 100px;
 }
 
-header > h2{
+.title{
     color: #61DAFB;
     margin-top: 5px;
     margin-left: 10px;
@@ -36,8 +36,8 @@ header > h2{
 
 header > h3{
     color: #DEEBF8;
-    margin-left: 60%;
-    margin-top: 5px;
+    margin-left: 5%;
+    margin-top: 10px;
     
     font-family: 'Inter';
     font-style: normal;
@@ -100,4 +100,33 @@ header > h3{
     height: 520px;
     right: 0px;
     top: 198px;
+}
+
+.toggle{
+    width: 40px;
+    height: 15px;
+    border-radius: 14px;
+    margin-left: 1%;
+    margin-top: 5px;
+    padding: 4px;
+    background-color: white;
+}
+
+.toggleButton{
+    width: 15px;
+    height: 15px;
+    border-radius: 14px;
+    background-color: black;
+    float: right;
+}
+
+.toggleLight{
+    margin-left: 50%;
+    margin-top: 10px;
+    color: gray;
+}
+
+.toggleDark{
+    margin-left: 1%;
+    margin-top: 10px;
 }
